[gd_scene load_steps=4 format=3 uid="uid://c4yqvpxq8r2gy"]

[ext_resource type="Script" path="res://scripts/creature.gd" id="1_z5p2v"]
[ext_resource type="PackedScene" uid="uid://dtpwglbexma6y" path="res://assets/creature/Animation_Walking_withSkin.glb" id="2_a6p2w"]
[ext_resource type="PackedScene" uid="uid://vo2t0kda0ua6" path="res://assets/creature/Animation_Running_withSkin.glb" id="3_b7p2x"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t8p3t"]
radius = 0.3
height = 1.8

[node name="Creature" type="CharacterBody3D"]
script = ExtResource("1_z5p2v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_t8p3t")

[node name="WalkingModel" type="Node3D" parent="."]
transform = Transform3D(-1.5, 0, -1.31134e-07, 0, 1.5, 0, 1.31134e-07, 0, -1.5, 0, -1.5, 0)

[node name="Animation_Walking_withSkin" parent="WalkingModel" instance=ExtResource("2_a6p2w")]

[node name="RunningModel" type="Node3D" parent="."]
transform = Transform3D(-1.5, 0, -1.31134e-07, 0, 1.5, 0, 1.31134e-07, 0, -1.5, 0, -1.5, 0)

[node name="Animation_Running_withSkin" parent="RunningModel" instance=ExtResource("3_b7p2x")] 